--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,7 +23,7 @@ jobs:
         uses: Platane/snk@v3
         with:
           # GitHub username to generate the animation for
-          github_user_name: thetriquetradeveloper
+          github_user_name: Faizan-code-arch
           # Define the output files and their configurations
           outputs: |
             dist/github-snake.svg
